# pulpos_custom

./: .gitignore  Producto_filled.csv  Producto_filled_original.csv  Producto_sample.csv  README.md  pyproject.toml  website_sync.py
.github/workflows/: ci.yml  deploy.yml
pulpos_custom/: hooks.py  modules.txt  patches.txt  setup.py  website_sync.py
pulpos_custom/config/: desktop.py  docs.py
pulpos_custom/patches/: 2025_12_18_set_website_warehouse.py
pulpos_custom/public/css/: pos_theme.css  pulpos_custom.css  pulpos_theme.css  website_products.css
pulpos_custom/public/js/: pulpos_custom.js
